--- a/TODO Web App/index.html
+++ b/TODO Web App/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
+    <title>To-do List</title>
+</head>
+
+<body>
+
+    <main>
+        <header>
+            <div class="container">
+                <div id="header">
+                    <h2><i class="fas fa-clipboard-check"></i> To-do List</h2>
+                    <div class="user_input">
+                        <input type="text" id="input" placeholder=" Add Your ToDos ..."><button
+                            id="add_item">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <section>
+            <div class="container">
+                <div id="to_do_list"></div>
+            </div>
+        </section>
+    </main>
+
+    <script src="index.js"></script>
+</body>
+
+</html>
