--- a/Registration-Form/index.html
+++ b/Registration-Form/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enrollment Form</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="wrapper">
+
+            <form>
+                <div class="header">
+                    <h2 class="head">Enrollment Form</h2>
+                </div>
+                <input name="name" type="text" class="input-name" placeholder="Name..." />
+                <input name="email" type="text" class="input-email" placeholder="Email..." />
+                <input name="text" type="text" class="input-course" placeholder="Course..." />
+
+                <div class="radio-btns">
+                    <p class="btn-radio">Please enter the Gender:</p>
+                    <input type="radio" id="male" name="gender" value="Male">
+                    <label for="male">MALE</label>
+                    <input type="radio" id="female" name="gender" value="Female">
+                    <label for="female">FEMALE</label>
+
+                    <p class="btn-radio">Please select your favorite Web language:</p>
+
+                    <input type="radio" id="html" name="fav_language" value="HTML">
+                    <label for="html">HTML</label>
+                    <input type="radio" id="css" name="fav_language" value="CSS">
+                    <label for="css">CSS</label>
+                    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+                    <label for="javascript">JavaScript</label>
+
+                </div>
+
+                <div class="btn">
+                    <div class="submit">Enroll</div>
+                </div>
+
+            </form>
+        </div>
+
+        <hr class="hr-vertical">
+
+        <div class="inner overflow">
+            <div class="title">
+                <h2 class="head-2">Students Enrolled</h2>
+            </div>
+
+            <table class="data" id="myData">
+                <thead>
+                    <tr class="dataRow">
+                        <th>DESCRIPTION</th>
+                        <th>IMAGE</th>
+                    </tr>
+                </thead>
+
+                <!-- <td></td>
+                <td></td> -->
+            </table>
+
+        </div>
+
+
+
+    </div>
+
+    <script src="index.js"></script>
+</body>
+
+</html>
